# RL_project_epfl

./: .gitignore  README.md  create_rollouts_ppo.py  create_rollouts_ppo_MC.py  create_rollouts_ppo_cartpole.py  create_rollouts_ppo_mountain_car.py  dpo_actor_cartpole_s0_K5.pth  dpo_actor_cartpole_s1_K5.pth  dpo_actor_seed0_K1000.pth  dpo_actor_seed0_K500.pth  main.ipynb  pyproject.toml  train_ppo.py  train_ppo_cartpole.py  train_ppo_continuous_yugo.py  train_ppo_mountain_car.py  visualize_ppo_cartpole.py  visualize_ppo_continuous.py  visualize_ppo_continuous_yugo.py  visualize_ppo_mountaincar.py
RL_PPO/: PPO_cartpole.py  PPO_mountaincar.py  PPO_mountaincarContinuous.py  PPO_mountaincar_postprocess.py  generate_traj.ipynb  tempCodeRunnerFile.py
checkpoints/: best_actor_model_Acrobot-v1  best_actor_model_CartPole-v1  best_actor_model_LunarLander-v3  best_actor_model_MountainCar-v0  best_critic_model_Acrobot-v1  best_critic_model_CartPole-v1  best_critic_model_MountainCar-v0  half_actor_model_Acrobot-v1  half_actor_model_CartPole-v1  half_actor_model_LunarLander-v3  half_actor_model_MountainCar-v0  half_critic_model_Acrobot-v1  half_critic_model_CartPole-v1  half_critic_model_MountainCar-v0
checkpoints_MC/: best_actor_model_MC  half_actor_model_MC
checkpoints_cartpole/: best_actor_model_CP  half_actor_model_CP
checkpoints_mountain_car/: best_actor_model_MC  half_actor_model_MC
data_generation/: generate_demonstrations.py
ppo_cartpole_rollouts/: partial_model_trajectories.csv  preference_pairs.csv
ppo_mountain_car_continuous_rollouts/: preference_pairs.csv  (+2 more)
(+55 files in other folders)
