[project]
name = "rl_training"
version = "0.1.0"
description = "Reinforcement Learning with Stable Baselines3"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "stable-baselines3[extra]==2.6.0",  # Main RL library
    "gymnasium==1.1.*",         # Modern Gym fork
    "torch==2.3.*",               # PyTorch (SB3 backend)
    "numpy==1.25",               # Required for SB3
    "tensorboard==2.15.*",       # Logging
    "notebook==7.4.*",
    "tqdm==4.67.*",
    "ipywidgets==8.1.*",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",                # Static typing
    "ruff==0.3.*",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"